[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydeed"
version = "0.0.8"
authors = [
  { name="Wenlong", email="wenlongtamu@gmail.com" },
]
description = "download and filter indeed.com job posts"
readme = "readme.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/wenlong2/pydeed"
Issues = "https://github.com/wenlong2/pydeed/issues"

