[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[metadata]
name = "pydeed"
version = "0.1.0"
description = "A web scraper for Indeed job posts with keyword filtering."
long_description = "file: README.md"
long_description_content_type = "text/markdown"
author = "Wenlong"
author_email = ""
url = "https://github.com/wenlong2/pydeed"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


